# queens-clone

./: .dockerignore  .gitignore  README.md  docker-compose.yml
.trae/skills/backend-developer/: SKILL.md
.trae/skills/devops-architect/: SKILL.md
.trae/skills/frontend-developer/: SKILL.md
.trae/skills/github-commit-expert/: SKILL.md
.trae/skills/pr-writer/: SKILL.md
.trae/skills/product-analyst/: SKILL.md
.trae/skills/qa-auditor/: SKILL.md
.trae/skills/software-architect/: SKILL.md
.trae/skills/spec-orchestrator/: SKILL.md
backend/: pyproject.toml  ruff.toml
backend/app/: db.py  main.py  schemas.py
backend/app/generator/: engine.py
backend/app/models/: puzzle.py
backend/tests/: test_generator.py  test_puzzles_api.py
docker/: Dockerfile.backend  Dockerfile.frontend
docs/: design.md  rfc.md
docs/specs/: product_vision.md
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: GameBoard.tsx
frontend/src/lib/: gameEngine.ts
